--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,17 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 100%;
   height: 50vh;
   margin: 0;
   padding: 0;
-  background-image: url(/img/photo-1417716146732-918825b83fa0.jpeg);
+  background-image: url(/img/black-white-city.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   -webkit-box-shadow: -20px 30px 50px;
@@ -30,6 +36,7 @@ header {
 }
 
 header .menu {
+  z-index: 1111;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -41,7 +48,7 @@ header .menu {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
-  height: 80px;
+  height: 18vh;
   background-color: rgba(0, 0, 0, 0.787);
   background-attachment: fixed;
   justify-items: center;
@@ -61,7 +68,20 @@ header .title-name {
   text-transform: uppercase;
   font-family: 'Monoton', cursive;
   font-weight: 400;
-  line-height: 100px;
+  line-height: 80px;
+}
+
+header .link-top {
+  position: absolute;
+  top: 70px;
+  left: 110px;
+}
+
+header .link-top i {
+  color: white;
+  width: 40px;
+  margin: 0;
+  padding: 0;
 }
 
 header nav {
@@ -127,6 +147,62 @@ header .hide-btn {
   font-size: 30px;
 }
 
+header .contaire {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+}
+
+header .contaire div {
+  background-color: rgba(0, 0, 0, 0.424);
+  width: 50%;
+  height: 32vh;
+  text-align: center;
+}
+
+header .contaire .premium p {
+  color: #17a12e;
+}
+
+header .contaire h4 {
+  color: white;
+  font-family: Anton;
+  letter-spacing: 3px;
+  margin: 0;
+}
+
+header .contaire span {
+  color: #c7c7c7;
+  text-align: center;
+  font-size: 10px;
+}
+
+header .hd-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+header .hd-image img {
+  width: 100%;
+  height: 30vh;
+  -webkit-box-shadow: 5px 5px 15px yellow;
+          box-shadow: 5px 5px 15px yellow;
+}
+
 /**************************************************************************************
 ******************                                                   ******************
 ******************                 MAIN  customized                  ******************
@@ -174,9 +250,9 @@ header .hide-btn {
   color: aliceblue;
   font-size: 10px;
   padding: 10px;
-  background-color: #2e2d2d;
+  background-color: #110f0f;
   text-transform: uppercase;
-  border: solid 1px #412323;
+  border: solid 1px #181616;
   font-family: 'Anton', sans-serif;
   font-weight: 100;
   letter-spacing: 2px;
@@ -244,7 +320,7 @@ header .hide-btn {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  background-color: #2e2d2d;
+  background-color: #110f0f;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -381,10 +457,13 @@ header .hide-btn {
   width: 50%;
   height: 15vh;
   background-color: rgba(19, 46, 1, 0.877);
-  border: 0.03px solid rgba(25, 46, 12, 0.829);
+  border: 0.09px solid rgba(25, 46, 12, 0.829);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .contact div p {
@@ -394,6 +473,23 @@ header .hide-btn {
 .contact div h3, .contact div p {
   margin: 0;
   color: white;
+}
+
+.contact div span {
+  color: white;
+  font-family: 'Anton', sans-serif;
+  font-weight: 100;
+}
+
+.contact div .small-p {
+  font-size: 10px;
+}
+
+.contact div i {
+  color: white;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  font-size: 20px;
 }
 
 .contact .big-items {
@@ -407,21 +503,31 @@ header .hide-btn {
 .contact .big-items img {
   width: 50px;
   height: 50px;
-  margin-top: 7px;
+  margin-top: 15px;
   margin-bottom: 7px;
 }
 
 .contact .big-items h3 {
-  margin-top: 10px;
+  margin-top: 15px;
   font-family: 'Anton', sans-serif;
   font-size: 30px;
+}
+
+.contact .big-items p {
+  font-family: 'Rajdhani', sans-serif;
 }
 
 .contact .big-items .small-p {
   font-size: 10px;
 }
 
-.contact .last-items {
+.contact .last-items, .contact .fa-skype, .contact .last-p {
   display: none;
 }
+
+/**************************************************************************************
+******************                                                   ******************
+******************                 footer customized                 ******************
+******************                                                   ******************
+**************************************************************************************/
 /*# sourceMappingURL=style.css.map */
