--- a/css/style.scss
+++ b/css/style.scss
@@ -6,7 +6,7 @@
 $colheader: rgb(221, 102, 22);
 $h2size:30px;
 $main-menu-size:10px;
-$itembg:rgb(46, 45, 45);
+$itembg:rgb(17, 15, 15);
 
 *{
     margin: 0;
@@ -20,21 +20,26 @@ $itembg:rgb(46, 45, 45);
 **************************************************************************************/
 header{
     display: flex;
+    flex-direction: row;  
+    flex-wrap: wrap;  
     width: 100%;
     height: 50vh;
     margin: 0;
     padding: 0;
-    background-image: url(/img/photo-1417716146732-918825b83fa0.jpeg);
+    background-image: url(/img/black-white-city.jpg);
     background-repeat: no-repeat;
-    background-size: cover; 
+    background-size: cover;
+    // background-attachment: fixed; 
     box-shadow: -20px 30px 50px; 
     justify-items: center; 
     .menu{
+        // position: fixed;
+        z-index: 1111;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
-        height: 80px;
+        height: 18vh;
         background-color: rgba(0, 0, 0, 0.787);
         background-attachment: fixed;
         justify-items: center;
@@ -50,7 +55,18 @@ header{
         text-transform: uppercase;
         font-family: 'Monoton', cursive;
         font-weight: 400;
-        line-height: 100px;
+        line-height: 80px;
+    }
+    .link-top{
+        position: absolute;  
+        top: 70px;  
+        left: 110px;          
+        i{
+            color: white;
+            width: 40px;
+            margin: 0;
+            padding: 0;
+        }
     }
     nav{
         position: fixed;
@@ -101,7 +117,49 @@ header{
         top: 20px;
         right: 40px;
         font-size: 30px;
-    }   
+    }
+    
+    
+    
+    .contaire{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        div{
+            background-color: rgba(0, 0, 0, 0.424);
+            width: 50%;
+            height:32vh; 
+            text-align: center;
+            
+        }
+        .premium p{
+            color: rgb(23, 161, 46);
+        }
+        h4{
+            color: white;
+            font-family: Anton;
+            letter-spacing: 3px;
+            margin: 0;
+        }
+        span{
+            color: rgb(199, 199, 199);
+            text-align: center;
+            font-size: 10px;
+        }
+    }
+    .hd-image{
+        display: flex;
+        flex-direction: row;
+        // border: 5px solid rebeccapurple;
+        width: 100%;
+        align-items: flex-end;
+        img{
+            width: 100%;
+            height: 30vh;
+            box-shadow: 5px 5px 15px yellow;
+        }
+
+    }
 }
 /**************************************************************************************
 ******************                                                   ******************
@@ -139,7 +197,7 @@ header{
         padding: 10px;
         background-color: $itembg;
         text-transform: uppercase;
-        border: solid 1px rgb(65, 35, 35);
+        border: solid 1px rgb(24, 22, 22);
         font-family: 'Anton', sans-serif;
         font-weight: 100;
         letter-spacing: 2px;
@@ -275,8 +333,9 @@ header{
         width: 50%;        
         height: 15vh;
         background-color: rgba(19, 46, 1, 0.877);
-        border: 0.03px solid rgba(25, 46, 12, 0.829);
+        border: 0.09px solid rgba(25, 46, 12, 0.829);
         align-items: center;
+        justify-content: center;
         p{
             text-align: center;
             
@@ -284,6 +343,20 @@ header{
         h3,p{
             margin: 0;
             color: white;
+        }
+        span{
+            color: white;
+            font-family: 'Anton', sans-serif;
+            font-weight: 100;
+        }
+        .small-p{
+            font-size: 10px;
+        }
+        i{
+            color: white;
+            margin-top: 3px;
+            margin-bottom: 3px;
+            font-size: 20px;
         }
         
     }
@@ -295,19 +368,28 @@ header{
      img{
          width: 50px;
          height: 50px;
-         margin-top: 7px;
+         margin-top: 15px;
          margin-bottom: 7px;
      }
      h3{
-         margin-top: 10px;
+         margin-top: 15px;
          font-family: 'Anton', sans-serif;
          font-size: 30px;
+     }
+     p{
+        font-family: 'Rajdhani', sans-serif;
      }
      .small-p{
          font-size: 10px;
      }
+
     }
-    .last-items{
+    .last-items , .fa-skype , .last-p{
         display: none;
     }
 }
+/**************************************************************************************
+******************                                                   ******************
+******************                 footer customized                 ******************
+******************                                                   ******************
+**************************************************************************************/
