--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ header .logo img {
 }
 
 header .title-name {
-  color: #dd6616;
+  color: white;
   font-size: 20px;
   text-transform: uppercase;
   font-family: 'Monoton', cursive;
@@ -165,8 +165,25 @@ header .contaire div {
   text-align: center;
 }
 
+header .contaire .premium {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 header .contaire .premium p {
-  color: #17a12e;
+  color: #209433;
+  text-transform: uppercase;
+  font-family: Slabo;
+  font-weight: 900;
+  font-size: 70%;
 }
 
 header .contaire h4 {
@@ -177,9 +194,17 @@ header .contaire h4 {
 }
 
 header .contaire span {
-  color: #c7c7c7;
+  color: #d6d1d1;
   text-align: center;
-  font-size: 10px;
+  font-size: 60%;
+  margin: 0;
+  padding: 0;
+  font-family: Slabo;
+  text-transform: uppercase;
+}
+
+header .contaire p, header .contaire span {
+  margin: 0px;
 }
 
 header .hd-image {
@@ -191,16 +216,15 @@ header .hd-image {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-header .hd-image img {
+header .hd-image .headphone {
+  margin-top: 30px;
   width: 100%;
-  height: 30vh;
-  -webkit-box-shadow: 5px 5px 15px yellow;
-          box-shadow: 5px 5px 15px yellow;
+  height: 50vh;
 }
 
 /**************************************************************************************
