--- a/css/style.scss
+++ b/css/style.scss
@@ -50,7 +50,7 @@ header{
         align-items: center;
     }
     .title-name{
-        color: rgb(221, 102, 22);
+        color: white;
         font-size: 20px;
         text-transform: uppercase;
         font-family: 'Monoton', cursive;
@@ -132,31 +132,47 @@ header{
             text-align: center;
             
         }
+        .premium{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
         .premium p{
-            color: rgb(23, 161, 46);
+            color: rgb(32, 148, 51);
+            text-transform: uppercase;
+            font-family: Slabo; 
+            font-weight: 900;
+            font-size: 70%;
         }
         h4{
             color: white;
             font-family: Anton;
-            letter-spacing: 3px;
+            letter-spacing: 3px;            
             margin: 0;
         }
         span{
-            color: rgb(199, 199, 199);
+            color: rgb(214, 209, 209);
             text-align: center;
-            font-size: 10px;
+            font-size: 60%;
+            margin: 0;
+            padding: 0;
+            font-family: Slabo;
+            text-transform: uppercase;
+        }
+        p, span{
+            margin: 0px;
         }
     }
     .hd-image{
         display: flex;
         flex-direction: row;
-        // border: 5px solid rebeccapurple;
         width: 100%;
-        align-items: flex-end;
-        img{
+        align-items: center;
+        .headphone{
+            margin-top: 30px;
             width: 100%;
-            height: 30vh;
-            box-shadow: 5px 5px 15px yellow;
+            height: 50vh;
+            
         }
 
     }
