--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,9 @@ $itembg:rgb(17, 15, 15);
     padding: 0;
 
 }
+html{
+    scroll-behavior: smooth;
+}
 /**************************************************************************************
 ******************                                                   ******************
 ******************                 HEARDER  customized               ******************
@@ -20,8 +23,8 @@ $itembg:rgb(17, 15, 15);
 **************************************************************************************/
 header{
     display: flex;
-    flex-direction: row;  
-    flex-wrap: wrap;  
+    flex-direction: column;  
+    flex-wrap: nowrap;  
     width: 100%;
     height: 50vh;
     margin: 0;
@@ -29,29 +32,30 @@ header{
     background-image: url(/img/black-white-city.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    // background-attachment: fixed; 
-    box-shadow: -20px 30px 50px; 
+    box-shadow: -20px 20px 50px; 
     justify-items: center; 
+    
     .menu{
-        // position: fixed;
         z-index: 1111;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-around;
         width: 100%;
         height: 18vh;
+        margin: 0;
+        padding: 0;
         background-color: rgba(0, 0, 0, 0.787);
         background-attachment: fixed;
         justify-items: center;
     }
     .logo img{
-        width: 100px;
+        width: 90px;
         height: 80px;
         align-items: center;
     }
     .title-name{
         color: white;
-        font-size: 20px;
+        font-size: 18px;
         text-transform: uppercase;
         font-family: 'Monoton', cursive;
         font-weight: 400;
@@ -70,61 +74,81 @@ header{
     }
     nav{
         position: fixed;
-        background-color: rgb(0, 0, 0);
-        margin-top: 80px; 
+        background-color: rgba(16, 17, 17, 0.876);
+        margin-top:18vh; 
         width: 50%;
-        right: -111%;
+        right: -100%;
+        height: 82vh;
         top: 0;
         text-align: center;
         line-height: normal;
         transition: 0.7s;
-        z-index: 99999;       
-        ul{
-            background-color: rgba(16, 17, 17, 0.876);
-            height: 36vh;            
-        }
+
         ul a{
             display: flex;
             flex-direction: column;
-            color: aliceblue;
-            font-size: 15px;
-            padding: 15px;  
+            justify-content: center;
+            align-items: center;
+            color: white; 
+            width: 80%;
+            height: 50px;
+            font-size: 100%;
+            margin: 20px;
+            background-color: rgba(67, 100, 35, 0.658);
+            border: 1px solid black;
+            border-radius: 50%;
             text-transform: uppercase;     
         }
-    }   
-    #chk{
-        position:absolute;
-        visibility: hidden;
-        z-index: -1111;
-    }
-    #chk:checked ~.menu{
-        right: 0;
-    }
+        ul{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 82vh;
+
+        }
+    }  
+    .show-btn, .hide-btn{
+        transition: 0.4s;
+        line-height: 100px;
+        cursor: pointer;
+    } 
     .show-btn{
-        font-size: 30px;
-        color: $colheader;
-    }
-    .hide-btn{
-        font-size: 30px;
-        color: rgb(253, 0, 0);
-        position: absolute;
-        top: 50px;
-        right: 40px;
-       
+        font-size: 40px;        
     }
     .hide-btn{
         position: absolute;
-        top: 20px;
+        top: 0vh;
         right: 40px;
-        font-size: 30px;
+        font-size: 40px;
     }
-    
-    
+    .menu a:hover,
+    .show-btn:hover,
+    .hide-bth:hover{
+        color: aqua;
+    }
+    .menu a{
+        transition: 0.4s;
+    }
+    label i{
+        color: white;
+    }
+    #chk{
+        position: absolute;
+        visibility: hidden;
+    }
+    #chk:checked ~ nav{
+        right: 0;
+
+    }
+ 
     
     .contaire{
         display: flex;
         flex-direction: row;
         width: 100%;
+        height: 32vh;
         div{
             background-color: rgba(0, 0, 0, 0.424);
             width: 50%;
@@ -205,6 +229,9 @@ header{
         font-size: $main-menu-size;
         padding: 10px;
         background-color: black;
+    }
+    .nav-link{
+        background-color: green;
     }
     div{
         width: 25%;
@@ -409,3 +436,32 @@ header{
 ******************                 footer customized                 ******************
 ******************                                                   ******************
 **************************************************************************************/
+footer{
+    width: 100%;
+    height: 25vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+
+    div{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+    }
+    i{
+        margin: 7px;
+        color: rgb(165, 165, 165);
+    }
+    a{
+        font-size: 60%;
+        margin: 5px;
+        color: rgb(165, 165, 165);
+    }
+    p{
+        font-size: 60%;
+        color: rgb(165, 165, 165);
+
+    }
+}
