--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /**************************************************************************************
 ******************                                                   ******************
 ******************                 HEARDER  customized               ******************
@@ -17,12 +21,12 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   width: 100%;
   height: 50vh;
   margin: 0;
@@ -30,8 +34,8 @@ header {
   background-image: url(/img/black-white-city.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  -webkit-box-shadow: -20px 30px 50px;
-          box-shadow: -20px 30px 50px;
+  -webkit-box-shadow: -20px 20px 50px;
+          box-shadow: -20px 20px 50px;
   justify-items: center;
 }
 
@@ -44,18 +48,19 @@ header .menu {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 100%;
   height: 18vh;
+  margin: 0;
+  padding: 0;
   background-color: rgba(0, 0, 0, 0.787);
   background-attachment: fixed;
   justify-items: center;
 }
 
 header .logo img {
-  width: 100px;
+  width: 90px;
   height: 80px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -64,7 +69,7 @@ header .logo img {
 
 header .title-name {
   color: white;
-  font-size: 20px;
+  font-size: 18px;
   text-transform: uppercase;
   font-family: 'Monoton', cursive;
   font-weight: 400;
@@ -86,21 +91,16 @@ header .link-top i {
 
 header nav {
   position: fixed;
-  background-color: black;
-  margin-top: 80px;
+  background-color: rgba(16, 17, 17, 0.876);
+  margin-top: 18vh;
   width: 50%;
-  right: -111%;
+  right: -100%;
+  height: 82vh;
   top: 0;
   text-align: center;
   line-height: normal;
   -webkit-transition: 0.7s;
   transition: 0.7s;
-  z-index: 99999;
-}
-
-header nav ul {
-  background-color: rgba(16, 17, 17, 0.876);
-  height: 36vh;
 }
 
 header nav ul a {
@@ -111,40 +111,81 @@ header nav ul a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  color: aliceblue;
-  font-size: 15px;
-  padding: 15px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  width: 80%;
+  height: 50px;
+  font-size: 100%;
+  margin: 20px;
+  background-color: rgba(67, 100, 35, 0.658);
+  border: 1px solid black;
+  border-radius: 50%;
   text-transform: uppercase;
+}
+
+header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 82vh;
+}
+
+header .show-btn, header .hide-btn {
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  line-height: 100px;
+  cursor: pointer;
+}
+
+header .show-btn {
+  font-size: 40px;
+}
+
+header .hide-btn {
+  position: absolute;
+  top: 0vh;
+  right: 40px;
+  font-size: 40px;
+}
+
+header .menu a:hover,
+header .show-btn:hover,
+header .hide-bth:hover {
+  color: aqua;
+}
+
+header .menu a {
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+header label i {
+  color: white;
 }
 
 header #chk {
   position: absolute;
   visibility: hidden;
-  z-index: -1111;
 }
 
-header #chk:checked ~ .menu {
+header #chk:checked ~ nav {
   right: 0;
-}
-
-header .show-btn {
-  font-size: 30px;
-  color: #dd6616;
-}
-
-header .hide-btn {
-  font-size: 30px;
-  color: #fd0000;
-  position: absolute;
-  top: 50px;
-  right: 40px;
-}
-
-header .hide-btn {
-  position: absolute;
-  top: 20px;
-  right: 40px;
-  font-size: 30px;
 }
 
 header .contaire {
@@ -156,6 +197,7 @@ header .contaire {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
+  height: 32vh;
 }
 
 header .contaire div {
@@ -267,6 +309,10 @@ header .hd-image .headphone {
   font-size: 10px;
   padding: 10px;
   background-color: black;
+}
+
+.products-menu .nav-link {
+  background-color: green;
 }
 
 .products-menu div {
@@ -554,4 +600,50 @@ header .hd-image .headphone {
 ******************                 footer customized                 ******************
 ******************                                                   ******************
 **************************************************************************************/
+footer {
+  width: 100%;
+  height: 25vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  justify-items: center;
+}
+
+footer div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+footer i {
+  margin: 7px;
+  color: #a5a5a5;
+}
+
+footer a {
+  font-size: 60%;
+  margin: 5px;
+  color: #a5a5a5;
+}
+
+footer p {
+  font-size: 60%;
+  color: #a5a5a5;
+}
 /*# sourceMappingURL=style.css.map */
