--- a/css/style.css
+++ b/css/style.css
@@ -60,33 +60,37 @@ header .menu {
 }
 
 header .logo img {
-  width: 90px;
-  height: 80px;
+  width: 80px;
+  height: 100px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
 header .title-name {
+  margin-right: 20px;
   color: white;
-  font-size: 18px;
+  font-size: 15px;
   text-transform: uppercase;
   font-family: 'Monoton', cursive;
   font-weight: 400;
   line-height: 80px;
 }
 
-header .link-top {
+header .menu .link-top {
+  margin: 0;
   position: absolute;
-  top: 70px;
-  left: 110px;
+  top: 13vh;
+  left: 55%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
-header .link-top i {
+header .menu .link-top i {
+  text-align: center;
   color: white;
-  width: 40px;
-  margin: 0;
-  padding: 0;
+  font-size: 20px;
+  padding: 5px;
 }
 
 header nav {
@@ -124,7 +128,8 @@ header nav ul a {
   margin: 20px;
   background-color: rgba(67, 100, 35, 0.658);
   border: 1px solid black;
-  border-radius: 50%;
+  -webkit-clip-path: polygon(0 0, 51% 22%, 100% 0, 100% 100%, 51% 74%, 0 100%);
+          clip-path: polygon(0 0, 51% 22%, 100% 0, 100% 100%, 51% 74%, 0 100%);
   text-transform: uppercase;
 }
 
@@ -197,11 +202,11 @@ header .contaire {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  height: 32vh;
+  height: 33vh;
+  background-color: rgba(8, 8, 8, 0.582);
 }
 
 header .contaire div {
-  background-color: rgba(0, 0, 0, 0.424);
   width: 50%;
   height: 32vh;
   text-align: center;
@@ -218,10 +223,14 @@ header .contaire .premium {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 70px;
 }
 
 header .contaire .premium p {
-  color: #209433;
+  color: #61d875;
   text-transform: uppercase;
   font-family: Slabo;
   font-weight: 900;
@@ -230,13 +239,14 @@ header .contaire .premium p {
 
 header .contaire h4 {
   color: white;
+  font-size: 30px;
   font-family: Anton;
   letter-spacing: 3px;
   margin: 0;
 }
 
 header .contaire span {
-  color: #d6d1d1;
+  color: #eeeaea;
   text-align: center;
   font-size: 60%;
   margin: 0;
@@ -316,6 +326,15 @@ header .hd-image .headphone {
 }
 
 .products-menu div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 25%;
   color: aliceblue;
   font-size: 10px;
@@ -527,7 +546,7 @@ header .hd-image .headphone {
   width: 50%;
   height: 15vh;
   background-color: rgba(19, 46, 1, 0.877);
-  border: 0.09px solid rgba(25, 46, 12, 0.829);
+  border: 0.017px groove rgba(19, 46, 1, 0.877);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -633,17 +652,73 @@ footer div {
 
 footer i {
   margin: 7px;
-  color: #a5a5a5;
+  color: #6d6d6d;
+  font-size: 150%;
 }
 
 footer a {
-  font-size: 60%;
+  font-size: 80%;
   margin: 5px;
-  color: #a5a5a5;
+  color: #6d6d6d;
 }
 
 footer p {
-  font-size: 60%;
-  color: #a5a5a5;
+  font-size: 90%;
+  color: #6d6d6d;
+}
+
+/**************************************************************************************
+******************                                                   ******************
+******************                 media screen                      ******************
+******************                                                   ******************
+**************************************************************************************/
+@media screen and (min-width: 500px) {
+  header {
+    height: 80vh;
+  }
+  header .contaire {
+    height: 62vh;
+  }
+  header .hd-image {
+    width: 100%;
+    height: 62vh;
+  }
+  header .hd-image .headphone {
+    margin-top: 45vh;
+    width: 100%;
+    height: 80vh;
+  }
+  .menu .link-top {
+    position: absolute;
+    top: 13vh;
+    left: 500%;
+  }
+  .menu .link-top i {
+    color: #b61a1a;
+    font-size: 20px;
+    margin: 0;
+    padding: 10px;
+  }
+  .menu .title-name {
+    font-size: 30px;
+  }
+  .menu .logo img {
+    width: 100px;
+    height: 100px;
+    margin-left: 0;
+  }
+  .contaire .premium h4 {
+    font-size: 50px;
+  }
+  .contaire .premium .lorem {
+    font-size: 15px;
+  }
+  .products-menu div, .products-menu div:nth-child(even) {
+    height: 150px;
+    font-size: 15px;
+  }
+  .about-us div {
+    height: 200px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
