--- a/css/style.css
+++ b/css/style.css
@@ -673,6 +673,9 @@ footer p {
 ******************                                                   ******************
 **************************************************************************************/
 @media screen and (min-width: 500px) {
+  /*+++++++++++++++++++++++++
++++++     Header      +++++
+++++++++++++++++++++++++++*/
   header {
     height: 80vh;
   }
@@ -713,12 +716,116 @@ footer p {
   .contaire .premium .lorem {
     font-size: 15px;
   }
+  /*+++++++++++++++++++++++++
++++++      main       +++++
+++++++++++++++++++++++++++*/
   .products-menu div, .products-menu div:nth-child(even) {
     height: 150px;
     font-size: 15px;
   }
   .about-us div {
     height: 200px;
+  }
+  .carousel {
+    height: 50vh;
+    width: 100%;
+  }
+  .carousel .carousel-item img {
+    height: 50vh;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  /*+++++++++++++++++++++++++
++++++     Header      +++++
+++++++++++++++++++++++++++*/
+  header .title-name {
+    display: none;
+  }
+  header nav {
+    position: relative;
+    background-color: rgba(16, 17, 17, 0.876);
+    margin-top: 40px;
+    width: 200px;
+    right: 0;
+    height: 50px;
+    text-align: center;
+    line-height: normal;
+    -webkit-transition: 0.7s;
+    transition: 0.7s;
+  }
+  header nav ul a {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    color: white;
+    width: 20%;
+    height: 50px;
+    font-size: 10%;
+    margin: 20px;
+    background-color: rgba(67, 100, 35, 0.658);
+    border: 1px solid black;
+    -webkit-clip-path: polygon(0 0, 51% 22%, 100% 0, 100% 100%, 51% 74%, 0 100%);
+            clip-path: polygon(0 0, 51% 22%, 100% 0, 100% 100%, 51% 74%, 0 100%);
+    text-transform: uppercase;
+  }
+  header nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    height: 2vh;
+  }
+  header .show-btn, header .hide-btn {
+    display: none;
+  }
+  header .show-btn {
+    font-size: 40px;
+  }
+  header .hide-btn {
+    position: absolute;
+    top: 0vh;
+    right: 40px;
+    font-size: 40px;
+  }
+  header .menu a:hover,
+  header .show-btn:hover,
+  header .hide-bth:hover {
+    color: aqua;
+  }
+  header .menu a {
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  header label i {
+    color: white;
+  }
+  header #chk {
+    position: absolute;
+    visibility: hidden;
+  }
+  header #chk:checked ~ nav {
+    right: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
