--- a/css/style.scss
+++ b/css/style.scss
@@ -488,6 +488,10 @@ footer{
 
 // Small devices (landscape phones, 500px and up)
 @media screen and (min-width:500px) { 
+
+/*+++++++++++++++++++++++++
++++++     Header      +++++
+++++++++++++++++++++++++++*/
     header{
         height: 80vh;
         .contaire{
@@ -505,9 +509,7 @@ footer{
             }
     
         }
-
     }
-
     .menu .link-top{        
         position: absolute;  
         top: 13vh;  
@@ -543,6 +545,9 @@ footer{
         }
         
     }
+/*+++++++++++++++++++++++++
++++++      main       +++++
+++++++++++++++++++++++++++*/
     .products-menu {
         div , div:nth-child(even){
             height: 150px;
@@ -552,6 +557,17 @@ footer{
     }
     .about-us div{
         height: 200px;
+    }
+    .carousel {
+  
+        height: 50vh;
+        width:100%;
+        .carousel-item{
+           
+        }
+        .carousel-item img{
+            height: 50vh;
+        }
     }
 
 }
@@ -579,8 +595,89 @@ footer{
 // }
 
 
-// // Large devices (desktops, 992px and up)
-// @media (min-width: 992px) {  }
+// Large devices (desktops, 992px and up)
+@media screen and (min-width:900px) {
+
+/*+++++++++++++++++++++++++
++++++     Header      +++++
+++++++++++++++++++++++++++*/
+    header{
+        .title-name{
+            display: none;
+        }
+        nav{
+            position: relative;
+            background-color: rgba(16, 17, 17, 0.876);
+            margin-top: 40px; 
+            width: 200px;
+            right: 0;
+            height: 50px;
+
+            text-align: center;
+            line-height: normal;
+            transition: 0.7s;
+    
+            ul a{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                color: white; 
+                width: 20%;
+                height: 50px;
+                font-size: 10%;
+                margin: 20px;
+                background-color: rgba(67, 100, 35, 0.658);
+                border: 1px solid black;
+                clip-path: polygon(0 0, 51% 22%, 100% 0, 100% 100%, 51% 74%, 0 100%);
+                text-transform: uppercase;     
+            }
+            ul{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 2vh;
+    
+            }
+        }  
+        .show-btn, .hide-btn{
+             display: none;
+        } 
+        .show-btn{
+            font-size: 40px;        
+        }
+        .hide-btn{
+            position: absolute;
+            top: 0vh;
+            right: 40px;
+            font-size: 40px;
+        }
+        .menu a:hover,
+        .show-btn:hover,
+        .hide-bth:hover{
+            color: aqua;
+        }
+        .menu a{
+            transition: 0.4s;
+        }
+        label i{
+            color: white;
+        }
+        #chk{
+            position: absolute;
+            visibility: hidden;
+        }
+        #chk:checked ~ nav{
+            right: 0;
+    
+        }
+        
+    }
+
+      
+  }
 
 
 // // Extra large devices (large desktops, 1200px and up)
