--- a/css/style.scss
+++ b/css/style.scss
@@ -559,16 +559,22 @@ footer{
         height: 200px;
     }
     .carousel {
-  
-        height: 50vh;
+        z-index: 999999;
+        display: flex !important;
+        justify-content: center;
+        align-items: center; 
+        height: 80vh;
         width:100%;
-        .carousel-item{
-           
+        .carousel-inner{
+            width: 50%;
+            height: 80vh;
         }
         .carousel-item img{
-            height: 50vh;
+            height:100%;
+            width: 100%;
         }
     }
+   
 
 }
 
@@ -606,78 +612,77 @@ footer{
             display: none;
         }
         nav{
+            display: flex;
+            justify-content: center;
+            align-items: center;
             position: relative;
-            background-color: rgba(16, 17, 17, 0.876);
-            margin-top: 40px; 
-            width: 200px;
+            background-color: rgba(0, 0, 0, 0);
+            margin-top: 20px; 
+            width: 50%;
             right: 0;
-            height: 50px;
-
+            height: 100px;
             text-align: center;
             line-height: normal;
             transition: 0.7s;
-    
-            ul a{
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
-                color: white; 
-                width: 20%;
-                height: 50px;
-                font-size: 10%;
-                margin: 20px;
-                background-color: rgba(67, 100, 35, 0.658);
-                border: 1px solid black;
-                clip-path: polygon(0 0, 51% 22%, 100% 0, 100% 100%, 51% 74%, 0 100%);
-                text-transform: uppercase;     
-            }
             ul{
+                background-color: none;
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
                 align-items: center;
                 width: 100%;
-                height: 2vh;
+                height: 50px;
     
             }
+    
+            ul a{
+                color: white; 
+                font-size: 20px;
+                margin: 0px;
+                background-color: rgba(0, 0, 0, 0);
+                border:none;
+                clip-path: none;
+                font-family: Anton;
+                text-transform: uppercase;     
+            }
+
+
         }  
+        .menu a:hover{
+            color: green;
+            background-color: white;
+        }
         .show-btn, .hide-btn{
              display: none;
         } 
-        .show-btn{
-            font-size: 40px;        
+
+        .menu .link-top{  
+            position: relative;
+            order: 1;      
+            margin: 0;
+            margin-top: 10px;
+            left:0;
+            transform: translate(none);  
+               
+            i{
+                text-align: center;
+                color: rgb(255, 255, 255);
+                font-size: 20px;
+                padding: 5px;
+            }
         }
-        .hide-btn{
-            position: absolute;
-            top: 0vh;
-            right: 40px;
-            font-size: 40px;
-        }
-        .menu a:hover,
-        .show-btn:hover,
-        .hide-bth:hover{
-            color: aqua;
-        }
-        .menu a{
-            transition: 0.4s;
-        }
-        label i{
-            color: white;
-        }
-        #chk{
-            position: absolute;
-            visibility: hidden;
-        }
-        #chk:checked ~ nav{
-            right: 0;
-    
-        }
-        
     }
 
-      
+/*+++++++++++++++++++++++++
++++++      main       +++++
+++++++++++++++++++++++++++*/  
+.products-menu{
+    div{
+        width: 12.5%;
+    }
+} 
   }
+
 
 
 // // Extra large devices (large desktops, 1200px and up)
