--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ header .contaire .premium {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 70px;
+  margin-top: 7px;
 }
 
 header .contaire .premium p {
@@ -325,7 +325,7 @@ header .hd-image .headphone {
   background-color: green;
 }
 
-.products-menu div {
+.products-menu a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -345,6 +345,10 @@ header .hd-image .headphone {
   font-family: 'Anton', sans-serif;
   font-weight: 100;
   letter-spacing: 2px;
+}
+
+.products-menu a:active {
+  color: #0aa317;
 }
 
 .main-texte {
@@ -726,8 +730,27 @@ footer p {
   .about-us div {
     height: 200px;
   }
+  .cont-carousel {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 255, 255, 0.308)), to(rgba(255, 0, 0, 0.287)));
+    background-image: linear-gradient(rgba(0, 255, 255, 0.308), rgba(255, 0, 0, 0.287));
+    width: 100%;
+    height: 50%;
+  }
   .carousel {
-    z-index: 999999;
+    z-index: 9999;
     display: -webkit-box !important;
     display: -ms-flexbox !important;
     display: flex !important;
@@ -737,15 +760,10 @@ footer p {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 80vh;
-    width: 100%;
-  }
-  .carousel .carousel-inner {
+    height: 50%;
     width: 50%;
-    height: 80vh;
   }
-  .carousel .carousel-item img {
-    height: 100%;
+  .carousel .carousel-item {
     width: 100%;
   }
 }
@@ -830,6 +848,9 @@ footer p {
     color: white;
     font-size: 20px;
     padding: 5px;
+  }
+  header .contaire .premium {
+    margin-top: 70px;
   }
   /*+++++++++++++++++++++++++
 +++++      main       +++++
