--- a/css/style.scss
+++ b/css/style.scss
@@ -77,6 +77,24 @@ header{
             padding: 5px;
         }
     }
+    .dropdown-item:hover{
+        color: black !important;
+        background-color: rgb(226, 192, 128) !important;
+        border: 1px solid black;
+        border-radius: 50px 5px;
+        // clip-path: polygon(75% 18%, 100% 0, 90% 62%, 50% 63%, 15% 64%, 0 93%, 0% 70%, 0 18%);
+
+    }
+    
+
+    // .btn-group  button{
+    //     z-index: 111;
+    //     width: 120px;
+      
+    //     font-size: 15px !important;
+        
+    // }
+    
     nav{
         position: fixed;
         background-color: rgba(16, 17, 17, 0.876);
@@ -245,6 +263,8 @@ header{
     }
     a{
         display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         width: 25%;
@@ -256,7 +276,6 @@ header{
         border: solid 1px rgb(24, 22, 22);
         font-family: 'Anton', sans-serif;
         font-weight: 100;
-        letter-spacing: 2px;     
 
     }
     a:hover {
@@ -265,6 +284,7 @@ header{
         text-decoration: none;
       
     }
+   
 }
 .main-texte{
     margin-top: 10px;
@@ -620,6 +640,7 @@ footer{
                 flex-direction: row;
                 justify-content: center;
                 align-items: center;
+                margin: 0px;
                 width: 100%;
                 height: 50px;
     
@@ -629,6 +650,7 @@ footer{
                 color: white; 
                 font-size: 20px;
                 margin: 0px;
+                padding: 0px;
                 background-color: rgba(0, 0, 0, 0);
                 border:none;
                 clip-path: none;
@@ -649,8 +671,8 @@ footer{
 
         .menu .link-top{  
             position: relative;
-            order: 1;      
-            margin: 0;
+            order: 1; 
+            margin-left: 150px; 
             margin-top: 10px;
             left:0;
             transform: translate(none);  
@@ -660,6 +682,10 @@ footer{
                 color: rgb(255, 255, 255);
                 font-size: 20px;
                 padding: 5px;
+            }
+            .btn-group button{
+                width: 80px;
+                font-size: 12px;
             }
         }
         .contaire .premium{
@@ -673,12 +699,12 @@ footer{
     .products-menu{
         a{
             width: 12.5%;
-            font-size:100%;
+            font-size:90%;
             letter-spacing: 4px;
         }
-        a, a:nth-child(even){
+        a:nth-child(even){
             height: 150px;
-            font-size: 100%;
+            font-size: 90%;
         }
     } 
 }
